--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-  </head>
-  <body>
-    <h1>Users</h1>
-    <table id="users">
-      <thead>
-        <th>&nbsp;</th>
-        <th>Id</th>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Email</th>
-      </thead>
-      <tbody>
-      </tbody>
-    </table>
-    <script src="bundle.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <% if (htmlWebpackPlugin.options.trackJSToken) { %>
+  <script type="text/javascript">window._trackJs = { token: '<%=htmlWebpackPlugin.options.trackJSToken%>' };</script>
+  <script type="text/javascript" src="https://cdn.trackjs.com/releases/current/tracker.js"></script>
+  <!-- END TRACKJS -->
+  <% } %>
+</head>
+
+<body>
+  <h1>Users</h1>
+  <table id="users">
+    <thead>
+      <th>&nbsp;</th>
+      <th>Id</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Email</th>
+    </thead>
+    <tbody>
+    </tbody>
+  </table>
+</body>
+
 </html>
